[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://src/assets/Fonts/Luna.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/assets/GUI/UI bar.png" type="Texture" id=3]
[ext_resource path="res://src/assets/GUI/Heart_HP.png" type="Texture" id=4]
[ext_resource path="res://src/assets/GUI/Butterfly_UI.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[node name="GUI" type="CanvasLayer" groups=[
"gui",
]]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -320.0
margin_bottom = 101.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Horizontal" type="HBoxContainer" parent="Control/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerB" type="HBoxContainer" parent="Control/TextureRect/Horizontal"]
margin_left = 62.0
margin_right = 157.0
margin_bottom = 87.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButterflyImage" type="TextureRect" parent="Control/TextureRect/Horizontal/ContainerB"]
margin_right = 64.0
margin_bottom = 87.0
texture = ExtResource( 5 )

[node name="ButterflyLabel" type="Label" parent="Control/TextureRect/Horizontal/ContainerB"]
margin_left = 68.0
margin_right = 95.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="ContainerL" type="HBoxContainer" parent="Control/TextureRect/Horizontal"]
margin_left = 172.0
margin_right = 257.0
margin_bottom = 87.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeImage" type="TextureRect" parent="Control/TextureRect/Horizontal/ContainerL"]
margin_right = 54.0
margin_bottom = 87.0
texture = ExtResource( 4 )

[node name="LifeLabel" type="Label" parent="Control/TextureRect/Horizontal/ContainerL"]
margin_left = 58.0
margin_right = 85.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
